# scry_isa

./: Cargo.toml  README.md  cargo-readme.md
.github/actions/run-test-groups/: action.yml
src/: assembly.rs  bits.rs  instructions.rs  lib.rs  matchers.rs
src/arbitrary/: instruction.rs  misc.rs  mod.rs
tests/: tests.rs
tests/arbitrary/: mod.rs
tests/instructions/: alu.rs  alu2.rs  call.rs  cap.rs  const_ext.rs  dup.rs  echo.rs  invalid.rs  jmp.rs  load.rs  misc.rs  mod.rs  multi_path_references.rs  pick.rs  req.rs  ret.rs  stack.rs  store.rs  val.rs
tests/misc/: excluded.rs  mod.rs
tests/properties/: mod.rs
