[package]
name = "scry_isa"
version = "0.1.0"
authors = ["Emad Jacob Maroun <emoun.open@gmail.com>"]
edition = "2018"

[dependencies]
duplicate="0.2"
lazy_static = "1.4"
variant_count="=1.1.0"
paste="1.0.5"
num-traits = { version = "0.2", optional = true }
quickcheck = { version = "1", optional = true }

[dev-dependencies]
quickcheck_macros = "1"

[features]
quickcheck_arbitrary = ["quickcheck", "num-traits"]